...
                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="beerBackground" translatesAutoresizingMaskIntoConstraints="NO" id="TEM-en-DN1">
                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                            </imageView>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Digite seu nome aqui" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="GXU-DX-zHP">
                                <rect key="frame" x="20" y="283" width="560" height="35"/>
                                <color key="backgroundColor" red="1" green="0.93360491505441534" blue="0.76328350659139155" alpha="0.53071120689655171" colorSpace="calibratedRGB"/>
                                <accessibility key="accessibilityConfiguration" hint="Write your username here" identifier="username" label="username"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="35" id="S2C-4A-qBe"/>
                                </constraints>
                                <color key="textColor" red="0.95686274510000002" green="0.96078431369999995" blue="0.92549019610000005" alpha="1" colorSpace="calibratedRGB"/>
                                <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="21"/>
                                <textInputTraits key="textInputTraits"/>
...
                                <rect key="frame" x="20" y="318" width="560" height="53"/>
                                <color key="backgroundColor" red="0.97418154759999998" green="0.91889983513657891" blue="0.77764611944152073" alpha="1" colorSpace="calibratedRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="53" id="llx-Yk-gBK"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="HelveticaNeue-CondensedBold" family="Helvetica Neue" pointSize="30"/>
                                <state key="normal" title="ENTER">
                                    <color key="titleColor" red="0.60543154760000006" green="0.5736160075630452" blue="0.47635328533093596" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Error label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dbM-ph-v05">
                                <rect key="frame" x="20" y="262" width="560" height="21"/>
                                <accessibility key="accessibilityConfiguration" identifier="error" label="error"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="21" id="biJ-y4-7gZ"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="HelveticaNeue-CondensedBold" family="Helvetica Neue" pointSize="17"/>
                                <color key="textColor" red="0.95686274510000002" green="0.96078431369999995" blue="0.92549019610000005" alpha="1" colorSpace="calibratedRGB"/>
                                <nil key="highlightedColor"/>
...
